--- a/app/src/main/res/navigation/base_navigation.xml
+++ b/app/src/main/res/navigation/base_navigation.xml
@@ -7,7 +7,7 @@
 	
 	<fragment
 		android:id="@+id/listContactF"
-		android:name="com.qegle.konturtestapp.ui.fragments.ListContactF"
+		android:name="com.qegle.konturtestapp.presentation.list.ListContactF"
 		android:label="ListContactF"
 		tools:layout="@layout/f_contacts">
 		<action
@@ -21,7 +21,7 @@
 	
 	<fragment
 		android:id="@+id/detailContactF"
-		android:name="com.qegle.konturtestapp.ui.fragments.DetailContactF"
+		android:name="com.qegle.konturtestapp.presentation.details.DetailContactF"
 		android:label="DetailContactF"
 		tools:layout="@layout/f_contact_card">
 		<argument
